fix layout shift

--- a/website/app/style.css
+++ b/website/app/style.css
@@ -179,7 +179,7 @@ label {
   font-size: 12px;
   display: block;
   letter-spacing: 0.04rem;
-  margin-bottom: 8px;
+  margin: 1.5em 0 8px;
   color: #888;
   user-select: none;
 }
@@ -196,17 +196,34 @@ code {
   border-radius: 6px;
   padding: 10px 12px;
   font-size: 14px;
-  line-height: 1.8;
+  line-height: 1.75;
+  margin: 8px 0 1.5em;
   white-space: pre-wrap;
+  letter-spacing: 0;
+}
+code:last-child {
+  margin-bottom: 0;
 }
 .code {
   font-size: 0.92em;
+  letter-spacing: 0;
+}
+code .hl-fade {
+  color: #888;
+}
+code .hl-highlighted {
+  --color: rgba(0, 0, 0, 0.04);
+  background: var(--color);
+  box-shadow: 0 0 0 3px var(--color);
+  border-radius: 2px;
 }
 
 p,
 .p {
+  font-size: 15px;
   line-height: 1.8;
   margin: 0 0 1.5em;
+  letter-spacing: -0.01em;
 }
 
 .controller {
@@ -379,8 +396,7 @@ blockquote {
 
 ul {
   margin: 0;
-  padding-left: 12px;
-  list-style-position: inside;
+  padding-left: 18px;
 }
 
 h2.ratio-title {
